--- a/project/css/style.css
+++ b/project/css/style.css
@@ -8,7 +8,6 @@ html,body{
 body{
     font-size: 14px;
     color: #000;
-    font-family: 'vidaloka_regular';
 }
 img{
     width: auto;
@@ -58,8 +57,9 @@ img{
     z-index: 1;
     background: url("../image/main.jpg") no-repeat;
     background-size: cover;
-    background-position: top center;
+    background-position: center center;
     width: 100%;
+    height: 1113px;
 }
 #slider-banner{
     padding-top: 400px;
@@ -123,5 +123,57 @@ img{
     position: absolute;
     right: -190px;
     top: 400px;
+}
+.block2{
+    padding-top: 1113px;
+    padding-bottom: 100px;
+}
+.block2 h1{
+    font-size: 36px;
+    line-height: 60px;
+    color: #333;
+    text-align: center;
+    margin-bottom: 100px;
+    font-family: 'vidaloka_regular';
+}
+.block2 h1 a{
+    color: #ffeb3b;
+    transition: .3s;
+    text-decoration: underline;
+}
+.block2 h1 a:hover{
+    text-decoration: none;
+}
+.box-block2{
+    display: flex;
+    margin-bottom: 100px;
+}
+.icon-block2{
+    margin-right: 32px;
+    width: 80px;
+}
+.icon-block2 i{
+    font-size: 40px;
+    color: #dad9d9;
+    transition: .3s;
+}
+.content-block2{
+    border-left: 2px solid #f1f1f1;
+    padding-left: 30px;
+}
+.content-block2 .title-block2{
+    font-size: 15px;
+    font-family: 'vidaloka_regular';
+    color: #313131;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+.content-block2 .text-block2{
+    font-size: 13px;
+    color: #969595;
+    line-height: 17px;
+}
+.box-block2:hover .icon-block2 i{
+    color: #ffeb3b;
 }
 
