--- a/project/css/style.css
+++ b/project/css/style.css
@@ -59,7 +59,6 @@ img{
     background-size: cover;
     background-position: center center;
     width: 100%;
-    height: 1113px;
 }
 #slider-banner{
     padding-top: 400px;
@@ -175,5 +174,87 @@ img{
 }
 .box-block2:hover .icon-block2 i{
     color: #ffeb3b;
+}
+#black-block.black-block{
+    padding: 90px 0;
+    background: url("../image/fon.jpg") no-repeat;
+    background-size: cover;
+}
+.icon-black-block img{
+    height: 45px;
+    width: auto;
+    display: block;
+    margin: 0 auto;
+}
+.num-black-box{
+    font-size: 60px;
+    color: #fff;
+    font-family: 'vidaloka_regular';
+    text-align: center;
+    margin-top: 50px;
+}
+.text-black-box{
+    font-size: 20px;
+    color: #ffeb3b;
+    font-family: 'vidaloka_regular';
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-top: 50px;
+}
+#creative-portfolio.creative-portfolio{
+    padding: 100px 0;
+}
+.creative-portfolio h2{
+    font-size: 36px;
+    color: #333;
+    font-family: 'vidaloka_regular';
+    margin-bottom: 35px;
+    text-align: center;
+}
+.creative-portfolio .creative-text{
+    font-size: 16px;
+    text-align: center;
+    color: #9d9c9c;
+    line-height: 26px;
+    max-width: 750px;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 100px;
+}
+.creative-portfolio .nav{
+    flex-wrap: nowrap;
+}
+.creative-portfolio .nav-tabs{
+    border-bottom: inherit;
+    margin: 0 auto;
+    margin-bottom: 100px;
+}
+.creative-portfolio .nav-tabs .nav-link{
+    border: 2px solid #ffeb3b;
+    border-radius: inherit;
+    color: #181a1f;
+    padding: 10px 40px;
+    font-weight: 500;
+    transition: .3s;
+}
+.creative-portfolio ul li{
+    margin-right: 10px;
+}
+.creative-portfolio ul li:last-child{
+    margin-right: 0;
+}
+.creative-portfolio .nav-tabs .nav-link:hover,
+.creative-portfolio .nav-tabs .nav-link.active{
+    background-color: #ffeb3b;
+}
+.creative-photo,
+.hor-photo-1,
+.hor-photo-2{
+    display: flex;
+    flex-wrap: nowrap;
+}
+.creative-photo{
+
 }
 
