--- a/project/css/style.css
+++ b/project/css/style.css
@@ -9,6 +9,13 @@ body{
     font-size: 14px;
     color: #000;
 }
+.for_page{
+    position: relative;
+    min-height: 100%;
+}
+.page{
+
+}
 img{
     width: auto;
     height: auto;
@@ -202,7 +209,7 @@ img{
     text-align: center;
     margin-top: 50px;
 }
-#creative-portfolio.creative-portfolio{
+.creative-portfolio{
     padding: 100px 0;
 }
 .creative-portfolio h2{
@@ -252,9 +259,119 @@ img{
 .hor-photo-1,
 .hor-photo-2{
     display: flex;
-    flex-wrap: nowrap;
+}
+.vert-photo{
+    max-width: 25.4%;
 }
 .creative-photo{
-
+    width: 1903px;
+    margin: 0 auto;
+}
+.for-mask{
+    position: relative;
+    transition: .3s;
+}
+.photo-mask{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: rgba(252,222,48,0.6);
+    width: 100%;
+    height: 100%;
+    padding-top: 90px;
+    display: none;
+}
+.mask-title{
+    margin-left: 60px;
+    font-size: 30px;
+    font-family: 'vidaloka_regular';
+    margin-bottom: 55px;
+}
+.mask-text{
+    margin-left: 60px;
+    font-size: 16px;
+    margin-bottom: 60px;
+}
+.mask-btn{
+    margin-left: 60px;
+    border: 2px solid black;
+    padding: 15px 42px;
+    color: black;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: bolder;
+}
+.for-mask:hover .photo-mask{
+    display: block;
+}
+.creative-service{
+    padding: 100px 0;
+}
+.creative-service h2{
+    font-size: 36px;
+    font-family: 'vidaloka_regular';
+    display: block;
+    text-align: center;
+    margin-bottom: 45px;
+}
+.service-text{
+    font-size: 16px;
+    margin: 0 auto;
+    width: 750px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+.service-box{
+    width: 360px;
+    height: 300px;
+    padding-top: 75px;
+    color: #fff;
+    margin-bottom: 30px;
+}
+.creative-service .container{
+    padding-left: 0;
+    padding-right: 0;
+}
+.red-box{
+    background: #ff5252;
+}
+.green-box{
+    background: #4caf50;
+}
+.violet-box{
+    background: #673ab7;
+}
+.blue-box{
+    background: #2196f3;
+}
+.yellow-box{
+    background: #ffeb3b;
+    color: black;
+}
+.lighgtblue-box{
+    background: #00bcd4;
+}
+.service-title-box{
+    font-size: 20px;
+    font-family: 'vidaloka_regular';
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.service-text-box{
+    font-size: 13px;
+    width: 275px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 45px;
+}
+.service-link{
+    display: block;
+    text-align: center;
+    color: #ffeb3b;
+    text-decoration: underline;
+}
+.yellow-box .service-link{
+    color: black;
 }
 
