--- a/project/css/style.css
+++ b/project/css/style.css
@@ -14,12 +14,12 @@ body{
     min-height: 100%;
 }
 .page{
-
+    padding-bottom: 293px;
 }
 img{
     width: auto;
     height: auto;
-    max-height: 100%;
+    max-width: 100%;
 }
 .header{
     z-index: 2;
@@ -260,9 +260,6 @@ img{
 .hor-photo-2{
     display: flex;
 }
-.vert-photo{
-    max-width: 25.4%;
-}
 .creative-photo{
     width: 1903px;
     margin: 0 auto;
@@ -373,5 +370,179 @@ img{
 }
 .yellow-box .service-link{
     color: black;
+}
+.our-client{
+    padding-top: 100px;
+    padding-bottom: 180px;
+    background: url("../image/fon.jpg") no-repeat;
+    background-size: cover;
+    color: white;
+}
+.our-client h2{
+    font-size: 36px;
+    font-family: 'vidaloka_regular';
+    margin-bottom: 50px;
+}
+.client-text{
+    width: 935px;
+    text-align: left;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 100px;
+}
+.client-carousel .carousel-indicators{
+    bottom: -80px;
+}
+.client-carousel .carousel-indicators .active{
+    background-color: #ffeb3b;
+}
+.client-carousel .carousel-indicators li{
+    width: 10px;
+    height: 10px;
+    background-color: white;
+}
+.our-team{
+    padding: 100px 0;
+}
+.our-team h2{
+    font-size: 51px;
+    font-family: 'vidaloka_regular';
+    text-align: center;
+    margin-bottom: 60px;
+}
+.our-team-text{
+    font-size: 16px;
+    width: 435px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 100px;
+}
+.team-man-box{
+    border: 1px solid #f1f1f1;
+    padding: 30px 0;
+}
+.team-man-name{
+    font-size: 16px;
+    font-family: 'vidaloka_regular';
+    margin: 0 auto;
+    text-align: center;
+    letter-spacing: .4px;
+    margin-bottom: 30px;
+}
+.team-man-description{
+    font-size: 13px;
+    color: #969595;
+    width: 280px;
+    margin: 0 auto;
+    text-align: center;
+    border-bottom: 1px solid #f1f1f1;
+    margin-bottom: 22px;
+    padding-bottom: 30px;
+}
+.team-man-icon{
+    display: flex;
+    justify-content: center;
+}
+.team-man-icon i{
+    font-size: 15px;
+    color: #dadada;
+    text-align: center;
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+}
+.team-icon-box{
+    width: 35px;
+    height: 35px;
+    border: 1px solid #dadada;
+    border-radius: 50%;
+    margin-right: 10px;
+    position: relative;
+}
+.team-icon-box:hover,
+.team-icon-box a i:hover{
+    color: white;
+    background-color: #ffeb3b;
+}
+.grey-box{
+    padding: 100px 0;
+    background: url("../image/fon1.jpg") no-repeat;
+    background-size: cover;
+}
+.grey-box h2{
+    font-size: 51px;
+    font-family: 'vidaloka_regular';
+    text-align: center;
+    margin-bottom: 45px;
+    color: white;
+}
+.grey-box-text{
+    font-size: 16px;
+    color: #969595;
+    width: 445px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 65px;
+}
+.form-email{
+    /*position: relative;
+    left: 100px;
+    bottom: 100px;*/
+    text-align: center;
+}
+.grey-box-email{
+    padding: 20px 370px 20px 30px;
+    font-size: 15px;
+    background-color: rgba(255,255,255,.2);
+    outline: none;
+    border: none;
+    font-weight: 500;
+    margin-right: 20px;
+}
+.grey-box-email::-webkit-input-placeholder{
+    color:white;
+}
+.grey-box-btn{
+    padding: 20px 50px;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    background: #ffeb3b;
+    border: none;
+    outline: none;
+}
+.footer{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    background: url("../image/fon2.jpg") no-repeat;
+    background-size: cover;
+    padding: 50px 0;
+}
+.footer-logo{
+    width: 15%;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+.footer-text{
+    font-size: 14px;
+    font-family: 'vidaloka_regular';
+    color: white;
+    width: 22%;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+.footer-text a{
+    color: #ffeb3b;
+}
+.footer-icons{
+    font-size: 27px;
+    width: 16%;
+    margin: 0 auto;
+}
+.footer-icons a{
+    color: white;
+    margin:0 15px;
 }
 
